@@ -4,6 +4,8 @@
     (important since current python3-ck in official Ubunutu 17.04 is quite outdated: v1.7.2)
   * fixed tests to report the error detected by running ck.access() or equivalent
   * testfix: stop testing 3.5dev and nightly Python, but add 3.6 which everyone uses
+  * improved auto-generation of a list of all modules and actions: 
+    http://cKnowledge.org/shared-modules.html
 
 * V1.9.4
   * fixed minor bug when searching repo by UID when repo doesn't exist
